<resources>
    <string name="app_name">抢单</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="personal_data">个人资料</string>
    <string name="my_collection">我的收藏</string>
    <string name="message_center">消息中心</string>
    <string name="coupon">优惠券</string>
    <string name="purse">钱包</string>
    <string name="settings">设置</string>
    <string name="recommend_friends">推荐好友</string>
    <string name="about">关于</string>
    <string name="user_agreement">用户协议</string>
    <string name="password">密码</string>
    <string name="exit">退出</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>
