<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/drawer_personal_data"
            android:icon="@mipmap/personal_data"
            android:title="@string/personal_data"
            />
        <item
            android:id="@+id/drawer_my_collection"
            android:icon="@mipmap/my_collection"
            android:title="@string/my_collection"
            />
        <item
            android:id="@+id/drawer_message_center"
            android:icon="@mipmap/message_center"
            android:title="@string/message_center"
            />
        <item
            android:id="@+id/drawer_coupon"
            android:icon="@mipmap/coupon"
            android:title="@string/coupon"
            />
        <item
            android:id="@+id/drawer_purse"
            android:icon="@mipmap/purse"
            android:title="@string/purse"
            />
        <item
            android:id="@+id/drawer_recommend_friends"
            android:icon="@mipmap/recommend_friends"
            android:title="@string/recommend_friends"
            />
        <item
            android:id="@+id/drawer_about"
            android:icon="@mipmap/about"
            android:title="@string/about"
            />
        <item
            android:id="@+id/drawer_user_agreement"
            android:icon="@mipmap/user_agreement"
            android:title="@string/user_agreement"
            />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@mipmap/settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/drawer_exit"
            android:icon="@mipmap/exit"
            android:title="@string/exit"
            />
    </group>
</menu>